--- a/us/diseno-web.html
+++ b/us/diseno-web.html
@@ -2,26 +2,26 @@
 <html dir="ltr" lang="es">
 <head>
     <meta http-equiv="content-type" content="text/html" charset="utf-8"/>
-    <link rel="stylesheet" href="css/animate.css" type="text/css">
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="css/custom.css" type="text/css">
-    <link rel="stylesheet" href="css/dark.css" type="text/css">
-    <link rel="stylesheet" href="css/font-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/swiper.css" type="text/css">
-    <link rel="stylesheet" href="css/sweetalert2.min.css">
+    <link rel="stylesheet" href="../css/animate.css" type="text/css">
+    <link rel="stylesheet" href="../css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="../css/custom.css" type="text/css">
+    <link rel="stylesheet" href="../css/dark.css" type="text/css">
+    <link rel="stylesheet" href="../css/font-icons.css" type="text/css">
+    <link rel="stylesheet" href="../css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="../css/style.css" type="text/css">
+    <link rel="stylesheet" href="../css/swiper.css" type="text/css">
+    <link rel="stylesheet" href="../css/sweetalert2.min.css">
     
-    <link rel="stylesheet" href="css/responsive.css" type="text/css">
+    <link rel="stylesheet" href="../css/responsive.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <link rel="stylesheet" href="rs-plugin/css/settings.css">
-    <link rel="stylesheet" href="rs-plugin/css/layers.css">
-    <link rel="stylesheet" href="rs-plugin/css/navigation.css">
-    <link rel="stylesheet" href="rs-plugin/css/revolution.addon.particles.css">
-    <link rel="stylesheet" href="rs-plugin/css/typewriter.css">
+    <link rel="stylesheet" href="../rs-plugin/css/settings.css">
+    <link rel="stylesheet" href="../rs-plugin/css/layers.css">
+    <link rel="stylesheet" href="../rs-plugin/css/navigation.css">
+    <link rel="stylesheet" href="../rs-plugin/css/revolution.addon.particles.css">
+    <link rel="stylesheet" href="../rs-plugin/css/typewriter.css">
 
-    <link rel="icon" type="image/png" href="images/logos/icono.png">
+    <link rel="icon" type="image/png" href="../images/logos/icono.png">
     <title>CreativosPlus | Agencia Digital </title>
 
     <meta property="og:type" content="website"/>
@@ -109,11 +109,11 @@
                     <i class="icon-reorder"></i>
                 </div>
                 <div id="logo">
-                    <a href="index.html" class="standard-logo" data-sticky-logo="images/logos/logo.png">
-                        <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
+                    <a href="index.html" class="standard-logo" data-sticky-logo="../images/logos/logo.png">
+                        <img style="margin-right:50px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
-                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
-                        <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
+                    <a href="index.html" class="retina-logo" data-sticky-logo="../images/logos/logo.png">
+                        <img style="margin-right:50px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
                 </div>
                 <nav id="primary-menu" class="with-arrows clearfix not-dark">
@@ -173,17 +173,17 @@
                             </a>
                             <ul class="colorLink">
                                 <li>
-                                    <a href="index.html">
+                                    <a href="../index.html">
                                         <div>
-                                            <img src="images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="">
+                                            <img src="../images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="">
                                             Español
                                         </div>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="us/index.html">
+                                    <a href="index.html">
                                         <div>
-                                            <img src="images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="">
+                                            <img src="../images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="">
                                             Ingles
                                         </div>
                                     </a>
@@ -200,13 +200,13 @@
 			<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.5.2">
                 <ul>
                     <li data-index="rs-240" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
-                        <img src="images/slider/hello-world.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+                        <img src="../images/slider/hello-world.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
                         <div class="rs-background-video-layer"
                             data-forcerewind="on"
                             data-volume="mute"
                             data-videowidth="100%"
                             data-videoheight="100%"
-                            data-videomp4="images/slider/hello-world.mp4"
+                            data-videomp4="../images/slider/hello-world.mp4"
                             data-videopreload="auto"
                             data-videoloop="loop"
                             data-forceCover="1"
@@ -254,7 +254,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="images/slider/web.png" alt="" data-ww="['800px','800px','800px','800px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
+                            <img src="../images/slider/web.png" alt="" data-ww="['800px','800px','800px','800px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-2"
@@ -310,7 +310,7 @@
                             data-whitespace="nowrap"
                             data-type="svg" 
                             data-actions='[{"event":"click","action":"scrollbelow","offset":"-60","delay":"","speed":"1000","ease":"Power1.easeInOut"}]'
-                            data-svg_src="images/slider/ic_keyboard_arrow_down_24px.svg" 
+                            data-svg_src="../images/slider/ic_keyboard_arrow_down_24px.svg" 
                             data-svg_idle="sc:transparent;sw:0;sda:0;sdo:0;" 
                             data-svg_hover="sc:transparent;sw:0;sda:0;sdo:0;" 
                             data-basealign="slide" 
@@ -349,7 +349,7 @@
             <div id="section-nextgen" class="page-section bottommargin-lg topmargin">
                 <div class="row clearfix">
                     <div class="col-lg-5 center">
-                        <img src="images/iphone-watch.png" alt="NextGen Framework" data-animate="fadeInLeft">
+                        <img src="../images/iphone-watch.png" alt="NextGen Framework" data-animate="fadeInLeft">
                     </div>
                     <div class="col-lg-7">
                         <div class="topmargin-lg d-none d-lg-block"></div>
@@ -380,12 +380,12 @@
                         </a>
                     </div>
                     <div class="col-lg-5 center">
-                        <img src="images/iphone-nexus.png" alt="Stunning Graphics" data-animate="fadeInRight">
+                        <img src="../images/iphone-nexus.png" alt="Stunning Graphics" data-animate="fadeInRight">
                     </div>
                 </div>
             </div>
         </div>
-        <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 700px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
+        <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(../images/3.jpg) left bottom / 100% no-repeat; height: 700px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
             <div class="container clearfix">
                 <div class="row clearfix">
                     <div class="col-lg-7 offset-lg-5">
@@ -403,57 +403,9 @@
                 </div>
             </div>
             <div class="video-wrap" style="position: absolute; height: 100%; z-index: 1;">
-                <div class="video-overlay d-none d-lg-block fadeInLeft animated" style="background: url('images/iphone-3d.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
+                <div class="video-overlay d-none d-lg-block fadeInLeft animated" style="background: url('../images/iphone-3d.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
             </div>
         </div>
-        <!-- <div class="section noborder nomargin">
-            <div class="container">
-                <div class="heading-block center">
-                    <h2>¿Tienes dudas? mira las Preguntas Frecuentes</h2>
-                </div>
-                <div class="clear"></div>
-                <div id="faqs" class="faqs topmargin">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="toggle faq">
-                                <div class="togglet texto-verde">
-                                    <i class="toggle-closed icon-question-sign texto-verde"></i>
-                                    <i class="toggle-open icon-question-sign texto-verde"></i>
-                                    <span class="texto-azul">¿Cuanto tiempo tardan las páginas web en realizarse?
-                                </div>
-                                <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Esto dependerá de los requerimientos de cada cliente, teniendo en cuenta dificultad o facilidad del sitio web ideal para cada uno.</div>
-                            </div>
-                            <div class="toggle faq">
-                                <div class="togglet texto-azul">
-                                    <i class="toggle-closed icon-comments-alt texto-verde"></i>
-                                    <i class="toggle-open icon-comments-alt texto-verde"></i>
-                                    ¿Qué necesito para tener una página web?
-                                </div>
-                                <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Lo primero que necesitas es tener una idea digital, luego buscar expertos como nosotros que lleven a cabo tu idea.</div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="toggle faq">
-                                <div class="togglet texto-azul">
-                                    <i class="toggle-closed icon-picture texto-verde"></i>
-                                    <i class="toggle-open icon-picture texto-verde"></i>
-                                    ¿Por qué debo optimizar mi sitio web?
-                                </div>
-                                <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Lo más importante de un sitio web es la visibilidad y satisfacción de los usuarios/clientes, es por esto que tu sitio web debe estar optimizado para así ganar prestigio.</div>
-                            </div>
-                            <div class="toggle faq">
-                                <div class="togglet texto-azul">
-                                    <i class="toggle-closed icon-smile1 texto-verde"></i>
-                                    <i class="toggle-open icon-smile1 texto-verde"></i>
-                                    ¿Como realizan los logotipos?
-                                </div>
-                                <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Realizamos bocetos e ilustraciones para encontrar el ADN de tu negocio convirtiéndolo en un formato digital que represente la identidad deseada.</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
     </section>
     <footer id="footer" class="bg-azul">
         <div class="container">
@@ -565,23 +517,23 @@
     </footer>
     <div id="gotoTop" class="icon-angle-up"></div>
 
-    <script src="js/jquery.js"></script>
-    <script src="js/plugins.js"></script> 
-    <script src="js/functions.js"></script>
-    <script src="js/sweetalert2.min.js"></script>
-    <script src="rs-plugin/js/jquery.themepunch.tools.min.js"></script>
-    <script src="rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
-    <script src="rs-plugin/js/revolution.addon.particles.min.js"></script>
-    <script src="rs-plugin/js/revolution.addon.typewriter.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.actions.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.carousel.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.kenburn.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.layeranimation.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.migration.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.navigation.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.parallax.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.slideanims.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.video.min.js"></script>
+    <script src="../js/jquery.js"></script>
+    <script src="../js/plugins.js"></script> 
+    <script src="../js/functions.js"></script>
+    <script src="../js/sweetalert2.min.js"></script>
+    <script src="../rs-plugin/js/jquery.themepunch.tools.min.js"></script>
+    <script src="../rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+    <script src="../rs-plugin/js/revolution.addon.particles.min.js"></script>
+    <script src="../rs-plugin/js/revolution.addon.typewriter.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.actions.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.carousel.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.kenburn.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.layeranimation.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.migration.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.navigation.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.parallax.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.slideanims.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.video.min.js"></script>
     <script>
         var revapi108,
 		tpj=jQuery;
@@ -672,6 +624,6 @@
             },
         });
     </script>
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
