--- a/us/index.html
+++ b/us/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="es">
+<html dir="ltr" lang="us">
 <head>
     <meta http-equiv="content-type" content="text/html" charset="utf-8"/>
     <link rel="stylesheet" href="../css/animate.css" type="text/css">
