--- a/us/trabajos.html
+++ b/us/trabajos.html
@@ -2,27 +2,27 @@
 <html dir="ltr" lang="es">
 <head>
     <meta http-equiv="content-type" content="text/html" charset="utf-8"/>
-    <link rel="stylesheet" href="css/animate.css" type="text/css">
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="css/custom.css" type="text/css">
-    <link rel="stylesheet" href="css/dark.css" type="text/css">
-    <link rel="stylesheet" href="css/font-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/fonts.css" type="text/css">
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/swiper.css" type="text/css">
-    <link rel="stylesheet" href="css/sweetalert2.min.css">
+    <link rel="stylesheet" href="../css/animate.css" type="text/css">
+    <link rel="stylesheet" href="../css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="../css/custom.css" type="text/css">
+    <link rel="stylesheet" href="../css/dark.css" type="text/css">
+    <link rel="stylesheet" href="../css/font-icons.css" type="text/css">
+    <link rel="stylesheet" href="../css/fonts.css" type="text/css">
+    <link rel="stylesheet" href="../css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="../css/style.css" type="text/css">
+    <link rel="stylesheet" href="../css/swiper.css" type="text/css">
+    <link rel="stylesheet" href="../css/sweetalert2.min.css">
 
-    <link rel="stylesheet" href="css/responsive.css" type="text/css">
+    <link rel="stylesheet" href="../css/responsive.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <link rel="stylesheet" href="rs-plugin/css/settings.css">
-    <link rel="stylesheet" href="rs-plugin/css/layers.css">
-    <link rel="stylesheet" href="rs-plugin/css/navigation.css">
-    <link rel="stylesheet" href="rs-plugin/css/revolution.addon.particles.css">
-    <link rel="stylesheet" href="rs-plugin/css/typewriter.css">
+    <link rel="stylesheet" href="../rs-plugin/css/settings.css">
+    <link rel="stylesheet" href="../rs-plugin/css/layers.css">
+    <link rel="stylesheet" href="../rs-plugin/css/navigation.css">
+    <link rel="stylesheet" href="../rs-plugin/css/revolution.addon.particles.css">
+    <link rel="stylesheet" href="../rs-plugin/css/typewriter.css">
 
-    <link rel="icon" type="image/png" href="images/logos/icono.png">
+    <link rel="icon" type="image/png" href="../images/logos/icono.png">
     <title>CreativosPlus | Nuestros Trabajos </title>
 
     <meta property="og:type" content="website"/>
@@ -110,11 +110,11 @@
                     <i class="icon-reorder"></i>
                 </div>
                 <div id="logo">
-                    <a href="index.html" class="standard-logo" data-sticky-logo="images/logos/logo.png">
-                        <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
+                    <a href="index.html" class="standard-logo" data-sticky-logo="../images/logos/logo.png">
+                        <img style="margin-right:50px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
-                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
-                        <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
+                    <a href="index.html" class="retina-logo" data-sticky-logo="../images/logos/logo.png">
+                        <img style="margin-right:50px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
                 </div>
                 <nav id="primary-menu" class="with-arrows clearfix not-dark">
@@ -174,17 +174,17 @@
                             </a>
                             <ul class="colorLink">
                                 <li>
-                                    <a href="index.html">
+                                    <a href="../index.html">
                                         <div>
-                                            <img src="images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="">
+                                            <img src="../images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="">
                                             Español
                                         </div>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="us/index.html">
+                                    <a href="index.html">
                                         <div>
-                                            <img src="images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="">
+                                            <img src="../images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="">
                                             Ingles
                                         </div>
                                     </a>
@@ -201,7 +201,7 @@
 			<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.5.2">
                 <ul>
                     <li data-index="rs-240" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
-                        <img src="images/slider/hello-world.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+                        <img src="../images/slider/hello-world.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
                         <div class="rs-background-video-layer"
                             data-forcerewind="on"
                             data-volume="mute"
@@ -255,7 +255,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="images/slider/portafolio.png" alt="" data-ww="['750px','750px','750px','750px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
+                            <img src="../images/slider/portafolio.png" alt="" data-ww="['750px','750px','750px','750px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-2"
@@ -311,7 +311,7 @@
                             data-whitespace="nowrap"
                             data-type="svg" 
                             data-actions='[{"event":"click","action":"scrollbelow","offset":"-50","delay":"","speed":"1000","ease":"Power1.easeInOut"}]'
-                            data-svg_src="images/slider/ic_keyboard_arrow_down_24px.svg" 
+                            data-svg_src="../images/slider/ic_keyboard_arrow_down_24px.svg" 
                             data-svg_idle="sc:transparent;sw:0;sda:0;sdo:0;" 
                             data-svg_hover="sc:transparent;sw:0;sda:0;sdo:0;" 
                             data-basealign="slide" 
@@ -356,10 +356,10 @@
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="http://jjcustomsolution.com/" class="item" style="background-image: url('images/portafolio/web/jjsolutions.jpg');"></a>
+                                    <a target="_blank" href="http://jjcustomsolution.com/" class="item" style="background-image: url('../images/portafolio/web/jjsolutions.jpg');"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="http://addictivebeautynow.com/" class="item" style="background-image: url('images/portafolio/web/addictivebeautyspa.jpg');"></a>
+                                    <a target="_blank" href="http://addictivebeautynow.com/" class="item" style="background-image: url('../images/portafolio/web/addictivebeautyspa.jpg');"></a>
                                 </li>
                             </ul>
                             <ul class="carousel-column column-2">
@@ -372,10 +372,10 @@
                                     </div>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="http://www.serviplotca.com/" class="item" style="background-image: url('images/portafolio/web/serviplotca.jpg'); min-height: 300px"></a>
+                                    <a target="_blank" href="http://www.serviplotca.com/" class="item" style="background-image: url('../images/portafolio/web/serviplotca.jpg'); min-height: 300px"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="https://weare-yourfriends.com/" class="item" style="background-image: url('images/portafolio/web/wayf.jpg'); min-height: 380px"></a>
+                                    <a target="_blank" href="https://weare-yourfriends.com/" class="item" style="background-image: url('../images/portafolio/web/wayf.jpg'); min-height: 380px"></a>
                                 </li>
                             </ul>
                         </div>
@@ -384,10 +384,10 @@
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="http://petroleumblg.com/" class="item" style="background-image: url('images/portafolio/web/blg.jpg'); min-height: 500px"></a>
+                                    <a target="_blank" href="http://petroleumblg.com/" class="item" style="background-image: url('../images/portafolio/web/blg.jpg'); min-height: 500px"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a target="_blank" href="http://www.drycleaningontherun.com/" class="item" style="background-image: url('images/portafolio/web/drycleaning.jpg'); min-height: 405px"></a>
+                                    <a target="_blank" href="http://www.drycleaningontherun.com/" class="item" style="background-image: url('../images/portafolio/web/drycleaning.jpg'); min-height: 405px"></a>
                                 </li>
                             </ul>
                         </div>
@@ -423,10 +423,10 @@
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
                                 <li class="carousel-grid-item">
-                                    <a href="images/portafolio/grafico/3.jpg" data-lightbox="image" class="item" style="background-image: url('images/portafolio/grafico/3.jpg'); min-height: 340px"></a>
+                                    <a href="../images/portafolio/grafico/3.jpg" data-lightbox="image" class="item" style="background-image: url('../images/portafolio/grafico/3.jpg'); min-height: 340px"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a href="images/portafolio/grafico/2.jpg" data-lightbox="image" class="item" style="background-image: url('images/portafolio/grafico/2.jpg'); min-height: 320px"></a>
+                                    <a href="../images/portafolio/grafico/2.jpg" data-lightbox="image" class="item" style="background-image: url('../images/portafolio/grafico/2.jpg'); min-height: 320px"></a>
                                 </li>
                                 <li class="carousel-grid-item">
                                     <div class="item bgcolor d-flex align-items-center px-4" style="min-height: 280px">
@@ -439,10 +439,10 @@
                             </ul>
                             <ul class="carousel-column column-2">
                                 <li class="carousel-grid-item">
-                                    <a href="images/portafolio/grafico/3-1.jpg" data-lightbox="image" class="item" style="background-image: url('images/portafolio/grafico/3-1.jpg'); min-height: 380px"></a>
+                                    <a href="../images/portafolio/grafico/3-1.jpg" data-lightbox="image" class="item" style="background-image: url('../images/portafolio/grafico/3-1.jpg'); min-height: 380px"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a href="images/portafolio/grafico/2-1.jpg" data-lightbox="image" class="item" style="background-image: url('images/portafolio/grafico/2-1.jpg'); min-height: 280px"></a>
+                                    <a href="../images/portafolio/grafico/2-1.jpg" data-lightbox="image" class="item" style="background-image: url('../images/portafolio/grafico/2-1.jpg'); min-height: 280px"></a>
                                 </li>
                             </ul>
                         </div>
@@ -451,10 +451,10 @@
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
                                 <li class="carousel-grid-item">
-                                    <a href="images/portafolio/grafico/1.jpg" data-lightbox="image" class="item" style="background-image: url('images/portafolio/grafico/1.jpg'); min-height: 550px; min-height: 550px"></a>
+                                    <a href="../images/portafolio/grafico/1.jpg" data-lightbox="image" class="item" style="background-image: url('../images/portafolio/grafico/1.jpg'); min-height: 550px; min-height: 550px"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a href="images/portafolio/grafico/1-2.jpg" data-lightbox="image" class="item" style="background-image: url('images/portafolio/grafico/1-2.jpg'); min-height: 415px"></a>
+                                    <a href="../images/portafolio/grafico/1-2.jpg" data-lightbox="image" class="item" style="background-image: url('../images/portafolio/grafico/1-2.jpg'); min-height: 415px"></a>
                                 </li>
                             </ul>
                         </div>
@@ -569,23 +569,23 @@
     </footer>
     <div id="gotoTop" class="icon-angle-up"></div>
 
-    <script src="js/jquery.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/functions.js"></script>
-    <script src="js/sweetalert2.min.js"></script>
-    <script src="rs-plugin/js/jquery.themepunch.tools.min.js"></script>
-    <script src="rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
-    <script src="rs-plugin/js/revolution.addon.particles.min.js"></script>
-    <script src="rs-plugin/js/revolution.addon.typewriter.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.actions.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.carousel.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.kenburn.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.layeranimation.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.migration.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.navigation.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.parallax.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.slideanims.min.js"></script>
-    <script src="rs-plugin/js/revolution.extension.video.min.js"></script>
+    <script src="../js/jquery.js"></script>
+    <script src="../js/plugins.js"></script>
+    <script src="../js/functions.js"></script>
+    <script src="../js/sweetalert2.min.js"></script>
+    <script src="../rs-plugin/js/jquery.themepunch.tools.min.js"></script>
+    <script src="../rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+    <script src="../rs-plugin/js/revolution.addon.particles.min.js"></script>
+    <script src="../rs-plugin/js/revolution.addon.typewriter.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.actions.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.carousel.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.kenburn.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.layeranimation.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.migration.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.navigation.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.parallax.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.slideanims.min.js"></script>
+    <script src="../rs-plugin/js/revolution.extension.video.min.js"></script>
     <script>
         var revapi108,
 		tpj=jQuery;
@@ -661,6 +661,6 @@
 		RsParticlesAddOn(revapi108);
 	});
     </script>
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
